06-servicemesh/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: demo-shop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - shop.k8s-monitoring.plgrnd.be
      secretName: demo-shop-tls
  rules:
    - host: shop.k8s-monitoring.plgrnd.be
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
